force-app/main/default/objects/Branch__c/fields/Conflict_Count__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Count__c</fullName>
    <label>Conflict Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Number of merge conflicts detected on this branch.</description>
</CustomField>