force-app/main/default/objects/Branch__c/fields/Created_By_User__c.field-meta.xml
<CustomField>
    <fullName>Created_By_User__c</fullName>
    <label>Created By User</label>
    <type>Text</type>
    <length>255</length>
    <description>The user who created this branch.</description>
</CustomField>