force-app/main/default/objects/Branch__c/fields/Merge_Status__c.field-meta.xml
<CustomField>
    <fullName>Merge_Status__c</fullName>
    <label>Merge Status</label>
    <type>Picklist</type>
    <description>Current merge status of the branch.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>NotMerged</fullName><default>true</default><label>Not Merged</label></value>
            <value><fullName>InProgress</fullName><default>false</default><label>In Progress</label></value>
            <value><fullName>Merged</fullName><default>false</default><label>Merged</label></value>
            <value><fullName>Conflicted</fullName><default>false</default><label>Conflicted</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>