force-app/main/default/objects/Branch__c/fields/Repository__c.field-meta.xml
<CustomField>
    <fullName>Repository__c</fullName>
    <label>Repository</label>
    <type>MasterDetail</type>
    <referenceTo>Repository__c</referenceTo>
    <relationshipLabel>Branches</relationshipLabel>
    <relationshipName>Branches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>The repository this branch belongs to.</description>
</CustomField>