force-app/main/default/objects/Branch__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <description>Current status of the branch.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Merged</fullName><default>false</default><label>Merged</label></value>
            <value><fullName>Archived</fullName><default>false</default><label>Archived</label></value>
            <value><fullName>Deleted</fullName><default>false</default><label>Deleted</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>