force-app/main/default/objects/Branch__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <description>The type of branch.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Feature</fullName><default>false</default><label>Feature</label></value>
            <value><fullName>Release</fullName><default>false</default><label>Release</label></value>
            <value><fullName>Hotfix</fullName><default>false</default><label>Hotfix</label></value>
            <value><fullName>Main</fullName><default>false</default><label>Main</label></value>
            <value><fullName>Development</fullName><default>false</default><label>Development</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>